# IJCAI2024_SM

Code/GeneSimulation_cpp/: HumanAgent.h  main.cpp
Code/GeneSimulation_py/: ConnectionManager.py  __init__.py  baseagent.py  geneagent3.py  humanagent.py  main.py  randomagent.py  simulator.py
Code/GeneSimulation_py/Client/: ClientConnectionManager.py  MainWindow.py  Player.py  RoundState.py  ServerListener.py  client_gui.py  data_collection_script.py  jhg_client.py  master_script.py  social_choice_client.py
Code/GeneSimulation_py/JGH Interface/: JHG agnostic interface.py
Code/GeneSimulation_py/Server/: ConnectionManager.py  JHGManager.py  Node.py  SC BS.py  SCManager.py  SC_BS.py  ServerConnectionManager.py  allInOneScript.py  decicated_time_tester.py  game_server.py  options_creation.py  rework.py  sc_bs.py  server.py  sim_interface.py  simulator.py  social_choice_sim.py  social_choice_test.py
Code/GeneSimulation_py/cppSocialChoiceGenes/: CMakeLists.txt  Chromosome.cpp  Chromosome.h  GameTheoryBot.cpp  GameTheoryBot.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  GeneticRunner.cpp  GreedyBot.cpp  GreedyBot.h  Logger.cpp  Logger.h  ParentBot.h  SocialChoiceSim.cpp  SocialChoiceSim.h  SocialChoiceTest.cpp  main.cpp
Code/GeneSimulation_py/cppSocialChoiceGenes/Bots/: GreedyBot.cpp  ParentBot.h
Code/GeneSimulation_py/cppSocialChoiceGenes/GeneticStuff/: GeneticAlgorithm.cpp  GeneticAlgorithm.h
Code/GeneSimulation_py/cppSocialChoiceGenes/LoggingSuite/: Logger.h
Code/Human/: Human.java
Code/State/: HumanAllocations.tmp  HumanAllocations.txt  state.txt
(+260 files in other folders)
